fix this fucking white space

--- a/static/styles/elementor-post-582-css.css
+++ b/static/styles/elementor-post-582-css.css
@@ -778,7 +778,7 @@ body:not(.rtl) .elementor-582 .elementor-element.elementor-element-178f65e2 .ele
 	--container-widget-flex-grow: 0;
 	--container-widget-align-self: initial;
 	--background-transition: 0.3s;
-	--margin-top: 60px;
+	--margin-top: 0px;
 	--margin-bottom: 0px;
 	--margin-left: 0px;
 	--margin-right: 0px;
